<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/home_img_ven"
        android:layout_width="96dp"
        android:layout_height="93dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="52dp"
        android:contentDescription="@string/home_vendedor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/vendedor" />

    <ImageView
        android:id="@+id/home_img_cli"
        android:layout_width="93dp"
        android:layout_height="77dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/clientes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:srcCompat="@drawable/cliente" />

    <Spinner
        android:id="@+id/home_spinner_ven"
        android:layout_width="257dp"
        android:layout_height="48dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/home_img_ven"
        app:layout_constraintTop_toTopOf="@+id/home_img_ven" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_vendedor"
        app:layout_constraintBottom_toTopOf="@+id/home_img_ven"
        app:layout_constraintEnd_toEndOf="@+id/home_img_ven"
        app:layout_constraintStart_toStartOf="@+id/home_img_ven"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="37dp"
        android:text="@string/clientes"
        app:layout_constraintEnd_toEndOf="@+id/home_img_cli"
        app:layout_constraintStart_toStartOf="@+id/home_img_cli"
        app:layout_constraintTop_toBottomOf="@+id/home_img_ven" />

    <Button
        android:id="@+id/home_btn_criar_ven"
        android:layout_width="139dp"
        android:layout_height="39dp"
        android:layout_marginStart="16dp"
        android:onClick="editarVendedor"
        android:text="@string/home_criar_ven"
        app:layout_constraintBottom_toBottomOf="@+id/home_img_ven"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/home_img_ven"
        app:layout_constraintTop_toBottomOf="@+id/home_spinner_ven" />

    <Button
        android:id="@+id/home_btn_criar_cli"
        android:layout_width="139dp"
        android:layout_height="41dp"
        android:text="@string/home_criar_cli"
        app:layout_constraintBottom_toBottomOf="@+id/home_img_cli"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.116"
        app:layout_constraintStart_toEndOf="@+id/home_img_cli"
        app:layout_constraintTop_toTopOf="@+id/home_img_cli"
        app:layout_constraintVertical_bias="0.527" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="120dp"
        android:layout_height="26dp"
        android:layout_marginTop="20dp"
        android:text="@string/home_lista_clientes"
        app:layout_constraintEnd_toEndOf="@+id/recyclerView"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="@+id/recyclerView"
        app:layout_constraintTop_toBottomOf="@+id/home_img_cli" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="387dp"
        android:layout_height="353dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_txt_selecionar"
        app:layout_constraintBottom_toTopOf="@+id/home_spinner_ven"
        app:layout_constraintEnd_toEndOf="@+id/home_spinner_ven" />

</androidx.constraintlayout.widget.ConstraintLayout>